src/test/resources/testcases/valid/control/while_break.tc
// EXPECT_RETURN: 25
int main() {
    int sum = 0;
    int i = 0;
    while (i < 10) {
        i = i + 1;
        if (i % 2 == 0) {
            continue; // skip even
        }
        sum = sum + i; // 1 + 3 + 5 + 7 + 9 = 25
        if (sum > 20) {
            break;
        }
    }
    return sum; // 25
}
