src/test/resources/testcases/invalid/01_duplicate_var.tc
// Test duplicate variable
int main() {
    int a = 1;
    int a = 2; // Should fail
    return a;
}
